[gd_scene load_steps=5 format=3 uid="uid://di7wj0xhdep0f"]

[ext_resource type="Script" path="res://Scripts/enemyboot.gd" id="1_ep0or"]
[ext_resource type="Texture2D" uid="uid://cog6x5u2w258a" path="res://Assets/enemyboot.png" id="2_kamdm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6h7m"]
size = Vector2(1073, 769)

[sub_resource type="CircleShape2D" id="CircleShape2D_kloc1"]
radius = 177.102

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_ep0or")

[node name="Area2D" type="Area2D" parent="."]

[node name="area" type="CollisionShape2D" parent="Area2D"]
position = Vector2(5.5, 12.5)
shape = SubResource("RectangleShape2D_g6h7m")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_kamdm")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="hitboxarea" type="Area2D" parent="." groups=["enemyhitbox"]]

[node name="hitbox" type="CollisionShape2D" parent="hitboxarea" groups=["enemyhitbox"]]
position = Vector2(5, 13)
shape = SubResource("CircleShape2D_kloc1")

[node name="shoottimer" type="Timer" parent="."]
wait_time = 1.5

[node name="radius" type="Area2D" parent="."]

[node name="radiusarea" type="CollisionShape2D" parent="radius"]
position = Vector2(5, 13)
shape = SubResource("CircleShape2D_kloc1")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="hitboxarea" to="." method="_on_hitboxarea_area_entered"]
[connection signal="timeout" from="shoottimer" to="." method="_on_shoottimer_timeout"]
[connection signal="area_entered" from="radius" to="." method="_on_radius_area_entered"]
[connection signal="area_exited" from="radius" to="." method="_on_radius_area_exited"]
